--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
   "dataPath": [
-    "./data/"
+    "https://meshviewer.fulda.freifunk.net/data/",
+    "//meshviewer.maglos.com/data/"
   ],
   "siteName": "Freifunk Fulda",
   "mapSigmaScale": 0.5,
